--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
   <p>We may update this Privacy Policy occasionally. Changes will be posted here with an updated date.</p>
 
   <h2>8. Contact Us</h2>
-  <p>If you have questions about this Privacy Policy, please contact us at: <a href="mailto:SPhrasele@gmail.com">Phrasele@gmail.com</a></p>
+  <p>If you have questions about this Privacy Policy, please contact us at: <a href="mailto:SPhrasele@gmail.com">Phraselestudios@gmail.com</a></p>
 </body>
 </html>
